# streamlit-rust

./: .gitignore  Cargo.toml  README.md  build.rs  logs.txt
example/hello/: Cargo.toml
example/hello/src/: main.rs
proto/: BackMsg.proto  HeightConfig.proto  Metric.proto  WidthConfig.proto
src/: error.rs  lib.rs  server.rs
src/utils/: auth.rs  logger.rs
streamlit/: Cargo.toml  build.rs
streamlit-macros/: Cargo.toml
streamlit-macros/src/: lib.rs
streamlit/examples/: basic.rs  button.rs  complete_demo.rs  container.rs  demo.rs  hello.rs  new_features.rs  new_features_demo.rs  timer.rs  widgets.rs
streamlit/proto/: AGENTS.md  Button.proto  ButtonLikeIconPosition.proto  ChatInput.proto  DownloadButton.proto  ForwardMsg.proto  Html.proto  LinkButton.proto  PageConfig.proto  PageLink.proto  Space.proto  TextAlignmentConfig.proto  back_msg.proto  forward_msg.proto
streamlit/src/: api.rs  api_old.rs  core.rs  error.rs  lib.rs  main.rs  main_macro.rs  memory.rs  proto.rs  server.rs  streamlit.rs
streamlit/src/api/: divider.rs  header.rs  mod.rs  write.rs
streamlit/src/elements/: alert.rs  app.rs  badge.rs  button.rs  checkbox.rs  code.rs  color_picker.rs  columns.rs  common.rs  container.rs  dataframe.rs  date_input.rs  download_button.rs  file_uploader.rs  form.rs  image.rs  markdown.rs  metric.rs  mod.rs  multiselect.rs  number_input.rs  plotly_chart.rs  progress.rs  radio.rs  selectbox.rs  slider.rs  spinner.rs  text_input.rs  time_input.rs  title.rs  visual_effects.rs
streamlit/src/proto/: mod.rs
streamlit/src/utils/: auth.rs  config.rs  hash.rs  logger.rs  mod.rs
streamlit/src/websocket/: factory.rs  frontend_handler.rs  handler.rs  message_types.rs  minimal_handler.rs  mod.rs  proto_handler.rs  simple_frontend_handler.rs  simple_handler.rs  streamlit_handler.rs
streamlit/tests/: api_tests.rs  common.rs  proto_handler_tests.rs  server_tests.rs
tests/: common.rs  proto_handler_tests.rs
