[package]
name = "streamlit"
version = "0.1.0"
edition = "2024"
authors = ["killf <killf@foxmail.com>"]
description = "Streamlit — A faster way to build and share data apps."
repository = "https://github.com/killf/streamlit-rust"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
actix-web = "4"
